classDiagram
    %% --- Core Menu Components ---
    class PublicMenuController {
        <<RestController>>
        -MenuItemService menuItemService
        +List~MenuItem~ getAllMenuItems()
        +List~MenuItem~ getMenuItemsByCategory(String)
    }

    class AdminMenuController {
        <<RestController>>
        -MenuItemService menuItemService
        +ResponseEntity~List~MenuItem~~ getAllMenuItems()
        +ResponseEntity~MenuItem~ getMenuItemById(Long)
        +ResponseEntity~MenuItem~ addMenuItem(MenuItem)
        +ResponseEntity~MenuItem~ updateMenuItem(Long, MenuItem)
        +ResponseEntity~Void~ deleteMenuItem(Long)
    }

    class MenuItemService {
        <<Service>>
        -MenuItemRepository menuItemRepository
        +List~MenuItem~ getAllMenuItems()
        +List~MenuItem~ getMenuItemsByCategory(String)
        +Optional~MenuItem~ getMenuItemById(Long)
        +MenuItem addMenuItem(MenuItem)
        +Optional~MenuItem~ updateMenuItem(Long, MenuItem)
        +boolean deleteMenuItem(Long)
    }

    class MenuItemRepository {
        <<Repository>>
        +List~MenuItem~ findByCategory(String)
    }

    class MenuItem {
        <<Entity>>
        -Long id
        -String name
        -String description
        -Double price
        -String category
    }

    %% --- Contact Form Components ---
    class ContactController {
        <<RestController>>
        -ContactService contactService
        +ResponseEntity~Void~ submitContactForm(ContactMessage)
    }

    class ContactService {
        <<Service>>
        -ContactMessageRepository contactMessageRepository
        +ContactMessage saveMessage(ContactMessage)
    }

    class ContactMessageRepository {
        <<Repository>>
        +ContactMessage save(ContactMessage)
        +Optional~ContactMessage~ findById(Long)
        +List~ContactMessage~ findAll()
        +void deleteById(Long)
        +List~ContactMessage~ findAllByEmail(String)
        +List~ContactMessage~ findAllBySubmittedAtBetween(LocalDateTime, LocalDateTime)
    }

    class ContactMessage {
        <<Entity>>
        -Long id
        -String name
        -String email
        -String message
        -LocalDateTime submittedAt
    }

    %% --- Admin Credential Components ---
    class SecurityConfig {
        <<Configuration>>
        +SecurityFilterChain filterChain(HttpSecurity)
        +UserDetailsService userDetailsService()
        +PasswordEncoder passwordEncoder()
    }

    class AdminUserDetailsService {
        <<Service>>
        -AdminRepository adminRepository
        +UserDetails loadUserByUsername(String)
    }

    class AdminRepository {
        <<Repository>>
        +Optional~Admin~ findByUsername(String)
    }

    class Admin {
        <<Entity>>
        -Long id
        -String username
        -String password
    }

    %% --- Relationships ---
    PublicMenuController --> "1" MenuItemService : uses
    AdminMenuController --> "1" MenuItemService : uses
    MenuItemService --> "1" MenuItemRepository : uses
    MenuItemRepository "1" o-- "*" MenuItem : manages

    %% Contact Form Relationships
    ContactController --> "1" ContactService : uses
    ContactService --> "1" ContactMessageRepository : uses
    ContactMessageRepository "1" o-- "*" ContactMessage : manages

    %% Security Relationships
    SecurityConfig --> "1" AdminUserDetailsService : configures
    AdminUserDetailsService --> "1" AdminRepository : uses
    AdminRepository "1" o-- "1" Admin : manages
    AdminMenuController ..> SecurityConfig : secured by